Remove all Notion integration (sync, views, config, migrations)
- Delete base/ai/notion/ package (~30 files: pages, handlers, utilities)
- Delete management/service/sync/ package (~40 files: all sync services)
- Delete NotionSyncView, NotionSyncController, SyncHealthController
- Migrate all entities from AbstractSyncableEntity to AbstractEntity
- Remove findByExternalId/findByLastSync from all repositories
- Remove external_id/last_sync/updated_at from DTOs and services
- Add Flyway migrations: H2 V102, MySQL V71 to drop sync columns
- Remove notion-api-java from pom.xml
- Remove notion-integration-tests and notion-e2e-tests CI jobs
- Remove indexes.sql entries for dropped columns
- Update DataMigrationService to not reference dropped columns
- Fix all test references to removed fields/methods/constructors